<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#bbdefb"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:id="@+id/menuTitle"
            android:text="@string/menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:paddingBottom="20dp"
            />

        <Button
            android:id="@+id/spotifyStreamer"
            android:text="@string/spotify_streamer"
            style="@style/AppButton"
            />

        <Button
            android:id="@+id/scoresApp"
            android:text="@string/scores_app"
            style="@style/AppButton"
            />

        <Button
            android:id="@+id/scoresLibrary"
            android:text="@string/scores_library"
            style="@style/AppButton"
            />

        <Button
            android:id="@+id/buildItBigger"
            android:text="@string/build_it_bigger"
            style="@style/AppButton"
            />

        <Button
            android:id="@+id/xyzReader"
            android:text="@string/xyz_reader"
            style="@style/AppButton"
            />

        <Button
            android:id="@+id/capstoneApp"
            android:text="@string/capstone_app"
            style="@style/CapstoneButton"
            />
    </LinearLayout>
</RelativeLayout>
